sftp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftp-ingress
  namespace: sftp
spec:
  defaultBackend:
    service:
      name: sftp
      port: 
        number: 30800
